# codex-discord-gateway

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md  config.discord-gateway.example.toml
.github/workflows/: ci.yml
src/: commands.rs  config.rs  handler.rs  main.rs  output.rs  visibility.rs
