[package]
name = "codex-discord-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
codex-app-server = { git = "https://github.com/arm64be/codex-rs", tag = "codex-0.136.0" }
codex-app-server-protocol = { git = "https://github.com/arm64be/codex-rs", tag = "codex-0.136.0" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serenity = { version = "0.12", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "rustls_backend"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
