[package]
name = "codex-discord-gateway"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/arm64be/codex-discord-gateway"

[dependencies]
anyhow = "1"
codex-gateway-core = { git = "https://github.com/arm64be/codex-gateway-core.git" }
serde = { version = "1", features = ["derive"] }
serenity = { version = "0.12", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "rustls_backend"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
